@@ -398,14 +398,14 @@ __libc_cleanup_routine (struct __pthread_cleanup_frame *f)
     f->__cancel_routine (f->__cancel_arg);
 }
 
-#define __pthread_cleanup_push(fct, arg) \
+#define __libc_cleanup_push(fct, arg) \
   do {									      \
     struct __pthread_cleanup_frame __clframe				      \
       __attribute__ ((__cleanup__ (__libc_cleanup_routine)))		      \
-      = { .__cancel_routine = (routine), .__cancel_arg = (arg),		      \
+      = { .__cancel_routine = (fct), .__cancel_arg = (arg),		      \
           .__do_it = 1 };
 
-#define __pthread_cleanup_pop(execute) \
+#define __libc_cleanup_pop(execute) \
     __clframe.__do_it = (execute);					      \
   } while (0)
 
