@@ -1,3 +1,9 @@
+2003-07-05  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/pthread/bits/libc-lock.h (__libc_cleanup_push): Renamed.
+	Fix use of parameter.
+	(__libc_cleanup_pop): Likewise.
+
 2003-07-04  Ulrich Drepper  <drepper@redhat.com>
 
 	* init.c (sigcancel_handler): Change parameters to match handler
